# website

./: .gitignore  Cargo.toml  Dioxus.toml  ENV.md  README.MD
.github/workflows/: ai-pipeline.yml  auth.yaml  frontend.yml  site.yml
crds/ai-pipeline/: deployment.yaml  service.yaml
crds/auth/: deployment.yaml  kustomization.yaml  service.yaml  virtualservice.yaml
crds/frontend/: Application.yaml  application.yaml  deployment.yaml  gateway.yaml  kustomization.yaml  service.yaml  virtualservice.yaml
services/ai_pipeline/: .gitignore  Cargo.toml  Dockerfile  HANDOFF-dice-training.md  build.rs  goal-this-repository-is-atomic-chipmunk.md  test.html
services/ai_pipeline/src/: helper.rs  main.rs  serve.rs
services/ai_pipeline/src/datasets/: dataset.rs  mod.rs
services/ai_pipeline/src/model/: head.rs  inferance.rs  mod.rs  training.rs
services/ai_pipeline/training/: README.md  export_detector.py  make_detection_dataset.py  make_head_crops.py  requirements.txt  train_detector.py  verify_export.py
services/auth/: Cargo.toml  Dockerfile  README.md
services/auth/migrations/: 20240510143629_tables.down.sql  20240510143629_tables.sql  20240510143629_tables.up.sql  20240512235725_insert_user.down.sql  20240512235725_insert_user.sql  20241126101622_roles.down.sql  20241126101622_roles.up.sql  20250301023347_llama_photoview.down.sql  20250301023347_llama_photoview.sql  20250301023347_llama_photoview.up.sql  20260406110758_g_token.down.sql  20260406110758_g_token.up.sql  20260423000001_bff_tokens.down.sql  20260423000001_bff_tokens.up.sql  20260514000001_arcane_permission.down.sql  20260514000001_arcane_permission.up.sql  20260601000001_admin_role_permissions.down.sql  20260601000001_admin_role_permissions.up.sql
services/auth/src/: auth.rs  main.rs
services/auth/src/auth/: core.rs  internal.rs  oauth.rs  permissions.rs  protected_route.rs  session_store.rs  telemetry.rs  user.rs
services/frontend/: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  build.rs  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.css
services/frontend/.cargo/: config.toml
services/frontend/assets/: main.css  tailwind.css
services/frontend/public/: tailwind.css
services/frontend/src/: main.rs
services/frontend/src/components/: Navbar.rs  cookie.rs  icon.rs  login.rs  mod.rs
services/frontend/src/hooks/: functionality.rs  mod.rs  theme.rs  user_login.rs
services/frontend/src/pages/: ark.rs  auth.rs  cam.rs  cv.rs  hook.rs  landing.rs  mod.rs  page_404.rs  profile.rs  valheim.rs
services/frontend/src/pages/camera/: mod.rs
services/frontend/src/utils/: mod.rs
services/frontend/static/: index.html
services/frontend/static/assets/favicon-dxhf6eb7b43ae8baa2.ico/: index.html
services/frontend2/: Cargo.toml  Dioxus.toml
services/frontend2/static/: index.html
services/frontend2/static/ark/: index.html
services/frontend2/static/favicon.ico/: index.html
services/frontend2/static/login/: index.html
services/frontend2/static/register/: index.html
services/server/: .env  README.md
services/server/src/: auth.rs
services/server/src/auth/: core.rs  oauth.rs  session_store.rs
src/: main.rs
