[package]
name = "dice_detector"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "^0.21.0", features = [
  "train",
  "dataset",
  "cuda",
  "autotune",
  "autodiff",
  "store",
  "std",
  "tui",
  "metrics",
] }
burn-train = "^0.21.0"
burn-store = { version = "^0.21.0", features = [
  "burnpack",
], default-features = false }
image = "^0.25.10"
anyhow = "1.0.102"
rand = "0.10.1"
log = "0.4.29"
indicatif = "0.18.4"

[build-dependencies]
burn-onnx = { version = "0.21.0", features = ["mmap"] }
