[package]
name = "dice_detector"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "^0.21.0", features = [
  "train",
  "dataset",
  "cuda",
  "autotune",
  "autodiff",
  "store",
  "std",
  "tui",
  "metrics",
] }
burn-train = "^0.21.0"
burn-store = { version = "^0.21.0", features = [
  "burnpack",
], default-features = false }
image = "^0.25.10"
anyhow = "1.0.102"
rand = "0.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"
opentelemetry-appender-tracing = "0.27"
indicatif = "0.18.4"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
burn-onnx = { version = "0.21.0", features = ["mmap"] }
