[package]
name = "auth"
version = "0.1.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["ws", "macros"] }
sqlx = {version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"]}
tokio = { version = "1.42.0", features = ["full"]}
axum-login = {version = "0.17.0"}
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = {version = "0.15.7"}
oauth2 = "4.4.2"
serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
thiserror = "2.0.6"
password-auth = "1.0.0"
reqwest = {version = "0.12.9", features = ["json"]}
serde_json = "1.0.133"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tower-session = "0.0.0"
async-trait = "0.1.86"
