[package]
name = "auth"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "postgres",
] }
tokio = { version = "1.50.0", features = ["full"] }
axum-login = { version = "0.18.0" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = { version = "0.15.7" }
oauth2 = "5.0.0"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
thiserror = "2.0.18"
password-auth = "1.0.0"
reqwest = { version = "^0.12.28", features = ["json"] }
serde_json = "1.0.149"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tower-sessions = { version = "0.14.0", features = ["axum-core"] }
