[package]
name = "frontend"
version = "0.1.2"
authors = ["Miles Storm"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.7.6", features = ["web", "router"] }

# Debug
log = "0.4.29"
dioxus-logger = "0.7.6"
dioxus-html = { version = "0.7.6", features = ["serialize"] }
console_error_panic_hook = "0.1.7"
gloo = { version = "0.12.0", features = ["futures"] }
manganis = { version = "0.7.6", features = ["dioxus"] }
dioxus-sdk = { version = "0.7.0", features = ["storage", "window"] }
web-sys = { version = "0.3.95", features = [
  'Navigator',
  'MediaDevices',
  'GetUserMediaRequest',
  'MediaStream',
  'MediaStreamConstraints',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'HtmlMediaElement',
  'HtmlVideoElement',
  'ImageData',
  'HtmlElement',
  'ContextAttributes2d',
  'Element',
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = { version = "0.1.44", features = ["log"] }
reqwest = { version = "0.13.2", features = ["json", "cookies", "form"] }
wasm-bindgen-futures = "0.4.68"
anyhow = "1.0.102"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
# nokhwa = { version = "0.10.4", features = ["input-jscam"] }
