[workspace]
resolver = "2"
members = [
  "packages/ui",
  "packages/web",
  "packages/desktop",
  "packages/mobile",
  "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.7" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.3", features = ["json"] }
jsonwebtoken = "10.3.0"
ulid = "1.2.1"
dotenvy = "0.15.7"
tower-sessions = { version = "0.14" }
tower-sessions-redis-store = "0.16"
axum = { version = "0.8.9" }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
